--- a/page1.html
+++ b/page1.html
@@ -66,6 +66,7 @@
 					document.querySelector('#o1').classList.add('green');
 				} else {
 					document.querySelector('#o1').classList.add('red');
+					console.log("Text from response does not match the requirement.");
 				}
 			} catch(err){
 				console.log(err);
