--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<h2>Questions:</h2>
 	<ol>
 		<li><a href="/ctewebd/page1.html" target="_blank">CORS: The first necessary thing</a></li>
+		<li><a href="/ctewebd/page2.html" target="_blank">HTTP Methods</a></li>
 	</ol>
 </body>
 </html>
