remove trace and connect from page 2

--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
     		}
 		}
 
-		let methods = ['GET','POST','PUT','DELETE','PATCH','TRACE','CONNECT'];
+		let methods = ['GET','POST','PUT','DELETE','PATCH'];
 		shuffleArray(methods);
 
 
