ngrok not needed

--- a/page1.html
+++ b/page1.html
@@ -42,7 +42,7 @@
 	<h4>You will be able to attempt rest of the problems only if you are able to solve this one, since all requests made to evaluate your code will be cross-origin.</h4>
 	<h4>Check the browser console for errors if any.</h4>
 	<form>
-		Server address (ngrok)
+		Server address 
 		<input type="text" name="" id="address">
 	</form>
 	<div>
