--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
 	<h4>Make sure the code which handles CORS (from the previous problem) is implemented in your code for this problem too, otherwise you'll get a CORS error.</h4>
 
 	<form>
-		Server address (ngrok)
+		Server address 
 		<input type="text" name="" id="address">
 	</form>
 	<div>
