--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<ul>
 		<li>Each page listed below contains a question to solve.</li>
 		<li>You need to code a backend server to fulfill the requirements given in question, and host it on your own machine (localhost).</li>
-		<li>Once you have hosted the server on your machine, you need to make it available on the internet using <a href="https://ngrok.com/" target="_blank">Ngrok</a>.</li>
-		<li>Each question has a textfield input, where you need to input the ngrok hosted address of your server.</li>
+		<li>Each question has a textfield input, where you need to input the hosted address of your server (for example: http://localhost:8000).</li>
+		<li>Ngrok is not required for any of the questions.</li>
 		<li>On pressing the submit button, the code built into the page will evaluate if your server meets the requirements of the question. </li>
 		<li>The page will make requests to your server to evaluate it, and then display the results on your screen.</li>
 		<li>At the end of the question is a checklist of the objectives. When you submit your address, the objectives in the checklist will change their color.</li>
