--- a/page3.html
+++ b/page3.html
@@ -35,13 +35,16 @@
 		<li>Many websites use Cookies (small pieces of information which can help a server remember your preferences) which is also a header.</li>
 		<li>On the server side, there is a <span class='code'>'Set-Cookie'</span> header, which is sent back with a response. This tells the browser to store some data on the client machine.</li>
 		<li>On the client side, the stored data is send back to the server with all subsequent requests, through a header called as <span class='code'>'Cookie'</span></li>
+		<li>This question does not involve cookies, since all requests made are cross-origin, and cookies make sense only for webpage requests or same-origin requests.</li>
 	</ul>
 	<h2>Question:</h2>
-	<h4>Write code for a backend server which responds to a POST request on <span>'/hungry'.</span></h4>
+	<h4>Write code for a backend server which responds to a POST request on <span>'/hungry/pizza'.</span></h4>
 	<h4>The request will contain a header with the name <span class='code'>'pizza'</span>. The header will have a value of some random pizza dish.</h4>
-	<h4>In response to the request, the server must set a cookie with the name <span class='code'>'order'</span>.</h4>
-	<h4>The cookie must contain today's date, followed by the first 5 letters of the name of the pizza.</h4>
-	<h4>For example: if today's date is <span class="code">7th April 2021</span>, and the pizza name is <span class="code">'Wisconsin 6 Cheese'</span>, then the server must set the cookie <span class="code">'order'</span> with the value of <span class="code">'07032021Wisco'</span>.</h4>
+	<h4>In response to the request, the server must set a header in the response with the name <span class='code'>'order'</span>.</h4>
+	<h4>The header must contain today's date, followed by the first 5 letters of the name of the pizza.</h4>
+	<h4>For example: if today's date is <span class="code">7th April 2021</span>, and the pizza name is <span class="code">'Wisconsin 6 Cheese'</span>, then the server must set the header <span class="code">'order'</span> with the value of <span class="code">'07032021Wisco'</span>.</h4>
+
+	<h4>You might a CORS error here due to the unconventional header 'pizza'. There is a fix for that as well, you might have to read MDN Web Docs to get it working right. You need to both allow this header, and expose your header (the used to set the cookie) on your backend.</h4>
 
 	<form>
 		Server address 
@@ -53,7 +56,7 @@
 
 	<h2 id="tasklist">Objectives Checklist:</h2>
 	<ul>
-		<li id="o1">Get a cookie on pizza request on /hungry</li>
+		<li id="o1" class="gray">Get order header on pizza request on /hungry/pizza</li>
 	</ul>
 
 	<script type="text/javascript">
@@ -64,14 +67,44 @@
 			document.querySelector('#o1').classList.add('gray');
 			const address = document.querySelector('#address').value;
 
-			const pizzaList = ['Wisconsin 6 Cheese', 'Pacific Veggie', 'Fiery Hawaaiian','Ultimate Pepperoni','Veggie Paradise','Mexican Green Wave','Middle Eastern Supreme','Classic Margherita']
+			const pizzaList = ['Wisconsin 6 Cheese', 'Pacific Veggie', 'Fiery Hawaaiian','Ultimate Pepperoni','Veggie Paradise','Mexican Green Wave','Middle Eastern Supreme','Classic Margherita'];
+
+			let randomPizza = pizzaList[Math.floor(Math.random() * pizzaList.length)];
 
 			try{
+				let res = await fetch(address + '/hungry/pizza', {
+					method: 'GET',
+					headers: {
+						'pizza': randomPizza
+					}
+				});
 
+				let answer = getsolution(randomPizza);
+				document.querySelector('#o1').classList.remove('gray');
+
+				if(res.headers.get('order') === answer){
+					document.querySelector('#o1').classList.add('green');
+				} else {
+					document.querySelector('#o1').classList.add('red');
+					console.log('Order did not match requirements');
+				}
 			}
 			catch(err){
-
+				console.log(err);
+				document.querySelector('#o1').classList.add('red');
 			}
+			document.querySelector('#tasklist').innerHTML = 'Objectives Checklist: Finished running';
+		}
+
+		function getsolution(pizza){
+			let fives = pizza.substr(0,5);
+			let a = new Date();
+			let date = a.getDate().toString();
+			date = date.length === 2 ? date : '0' + date;
+			let month = a.getMonth().toString();
+			month = month.length === 2 ? month : '0' + month;
+			let year = a.getUTCFullYear().toString();
+			return date+month+year+fives;
 		}
 	</script>
 </body>
