remove construction tag

--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
 	</style>
 </head>
 <body style="font-family: Garamond;">
-	<h1>HTTP Headers and Cookies (This Page Is Under Construction)</h1>
+	<h1>HTTP Headers and Cookies</h1>
 	<ul>
 		<li>Headers are small pieces of information sent along with the request/response.</li>
 		<li>The are usually used by the server to identify the client, so that it can serve a resource appropriately.</li>
