--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<li><a href="/ctewebd/page1.html" target="_blank">CORS: The first necessary thing</a></li>
 		<li><a href="/ctewebd/page2.html" target="_blank">HTTP Methods</a></li>
 		<li><a href="/ctewebd/page3.html" target="_blank">HTTP Headers and Cookies</a></li>
+		<li><a href="/ctewebd/page4.html" target="_blank:\">Request and Response Bodies</li>
 	</ol>
 </body>
 </html>
