remove default value

--- a/page4.html
+++ b/page4.html
@@ -49,7 +49,7 @@
 	<h4>Request will FormData will be of the format <span class='code'>key: data; value: 'Some string here'</span>, then the server should respond with JSON data of the format <span class='code'>{'data':'Some string here'}</span>.</h4>
 	<form>
 		Server address 
-		<input type="text" name="" id="address" value="http://localhost:8000">
+		<input type="text" name="" id="address">
 	</form>
 	<div>
 		<span class='button' onclick='check()'>Submit</span>
