--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<li><a href="/ctewebd/page1.html" target="_blank">CORS: The first necessary thing</a></li>
 		<li><a href="/ctewebd/page2.html" target="_blank">HTTP Methods</a></li>
 		<li><a href="/ctewebd/page3.html" target="_blank">HTTP Headers and Cookies</a></li>
-		<li><a href="/ctewebd/page4.html" target="_blank:\">Request and Response Bodies</li>
+		<li><a href="/ctewebd/page4.html" target="_blank">Request and Response Bodies</li>
+		<li><a href="/ctewebd/page5.html" target="_blank">Rate Limiting</a></li>
 	</ol>
 </body>
 </html>
