--- a/page3.html
+++ b/page3.html
@@ -101,7 +101,7 @@
 			let a = new Date();
 			let date = a.getDate().toString();
 			date = date.length === 2 ? date : '0' + date;
-			let month = a.getMonth().toString();
+			let month = (a.getMonth()+1).toString();
 			month = month.length === 2 ? month : '0' + month;
 			let year = a.getUTCFullYear().toString();
 			return date+month+year+fives;
