--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <h2 class="text-gray-800 bg-gray-100 text-xl mx-7 font-mono pt-3">Questions:</h2>
 
 	<div class="list-decimal pt-4 text-md bg-gray-100 space-y-2 py-3 px-8 text-gray-800 font-mono underline">
-		<li><a href="/Questions/page1.html" target="_blank">CORS: The first necessary thing</a></li>
-		<li><a href="/Questions/page2.html" target="_blank">HTTP Methods</a></li>
-		<li><a href="/Questions/page3.html" target="_blank">HTTP Headers and Cookies</a></li>
-		<li><a href="/Questions/page4.html" target="_blank">Request and Response Bodies</li>
-		<li><a href="/Questions/page5.html" target="_blank">Rate Limiting</a></li>
+		<li><a href="/ctewebd/Questions/page1.html" target="_blank">CORS: The first necessary thing</a></li>
+		<li><a href="/ctewebd/Questions/page2.html" target="_blank">HTTP Methods</a></li>
+		<li><a href="/ctewebd/Questions/page3.html" target="_blank">HTTP Headers and Cookies</a></li>
+		<li><a href="/ctewebd/Questions/page4.html" target="_blank">Request and Response Bodies</li>
+		<li><a href="/ctewebd/Questions/page5.html" target="_blank">Rate Limiting</a></li>
 	</ol>
 </body>
 </html>
