--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<li><a href="/ctewebd/Questions/page1.html" target="_blank">CORS: The first necessary thing</a></li>
 		<li><a href="/ctewebd/Questions/page2.html" target="_blank">HTTP Methods</a></li>
 		<li><a href="/ctewebd/Questions/page3.html" target="_blank">HTTP Headers and Cookies</a></li>
-		<li><a href="/ctewebd/Questions/page4.html" target="_blank">Request and Response Bodies</li>
+		<li><a href="/ctewebd/Questions/page4.html" target="_blank">Request and Response Bodies</a></li>
 		<li><a href="/ctewebd/Questions/page5.html" target="_blank">Rate Limiting</a></li>
 	</ol>
 </body>
