fix typo in last instruction

--- a/Questions/page3.html
+++ b/Questions/page3.html
@@ -124,7 +124,7 @@
     </h4>
 
     <h4>
-      You might a CORS error here due to the unconventional header 'pizza'.
+      You might get a CORS error here due to the unconventional header 'pizza'.
       There is a fix for that as well, you might have to read MDN Web Docs to
       get it working right. You need to both allow this header, and expose your
       header (the used to set the cookie) on your backend.
