--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR" rel="stylesheet" rel="stylesheet">
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/ctewebd/styles.css">
 </head>
 <body>
 	<div class="bg-gray-50 py-2 shadow-xl">
